# bump_semver_anywhere

./: .manver.toml  .pre-commit-config.yaml  README.md  action.yaml  bump_semver_anywhere.toml  dockerfile  pyproject.toml  refactor.md
.github/: comvent-manver-setup.yaml
.github/workflows/: bump_semver_anywhere.yaml  docker.yaml  manver.yaml  publish_pypi.yaml
bump_semver_anywhere/: __init__.py  app.py  cli.py
docker/: entrypoint.sh
gh-action/: entrypoint.sh
manver/: __init__.py  app.py  cli.py  lib.py
src/manver/: cli.py  lib.py
tests/: .manver.test.toml  bump_semver_anywhere.test.toml  conftest.py  test_app.py  test_bump_semver_anywhere.py  test_config.py  test_lib.py  test_manver.py  test_vcs.py
tests/files/: .manver.test.toml  docker-compose.yaml  package.json  pyproject.toml
tests/files/src/: docker-compose.yaml  package.json
