[tool.poetry]
name = "bump_semver_anywhere"
version = "0.1.0"
description = ""
authors = ["Ivan Gonzalez <scratchmex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytomlpp = "^1.0.3"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}
pre-commit = "^2.15.0"
isort = "^5.9.3"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "pytomlpp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "semver"
ignore_missing_imports = true