[tool.poetry]
name = "bump_semver_anywhere"
version = "0.3.0"
description = "Bump your semantic version of any software using regex"
authors = ["Ivan Gonzalez <scratchmex@gmail.com>"]
readme = "README.md"
repository = "https://github.com/scratchmex/all-relative"

[tool.poetry.dependencies]
python = "^3.8"
pytomlpp = "^1.0.3"
semver = "^2.13.0"
click = "^8.0.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}
pre-commit = "^2.15.0"
isort = "^5.9.3"
pytest-mock = "^3.6.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
"bump_semver_anywhere" = "bump_semver_anywhere.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "pytomlpp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "semver"
ignore_missing_imports = true